# DruidEngine

./: .cproject  .gitignore  .project  CMakeLists.txt  DE::Array<u32>.txt  DE::DoubleStackAllocator.txt  DE::LinearAllocator.txt  DE::PoolAllocator.txt  DE::StackAllocator.txt  Doxyfile  DruidEngine.project  README.md  TODO.md  Tree<i32>.txt  build.sh  class.sh  clean.sh  dependencies.sh  doc.sh  log.txt  test.sh
code/Assert/: Assert.cpp  Assert.hpp
code/Command/: Command.hpp  CommandLine.cpp  CommandLine.hpp  DefaultCommands.cpp  DefaultCommands.hpp
code/Config/: ConfigMap.cpp  ConfigMap.hpp  ConfigObject.cpp  ConfigObject.hpp  EngineConfig.cpp  EngineConfig.hpp  EngineSettings.cpp  EngineSettings.hpp  InstanceableByClassName.cpp  InstanceableByClassName.hpp
code/Containers/: Array.hpp  BaseContainer.cpp  BaseContainer.hpp  DynamicArray.hpp  HashMap.hpp  List.hpp  SequentialContainer.hpp  Tree.hpp
code/Core/: AttributeBase.cpp  AttributeBase.hpp  Basic.hpp  BasicTypes.hpp  ClassManager.cpp  ClassManager.hpp  ConfigMap.cpp  ConfigMap.hpp  Core.hpp  DE_Class.cpp  DE_Class.hpp  DE_Macros.hpp  Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  Functor.hpp  Hash.cpp  Hash.hpp  Macros.hpp  Memory.cpp  Memory.hpp  ObjectBase.cpp  ObjectBase.hpp  ScenesManager.cpp  ScenesManager.hpp  Serialization.cpp  Serialization.hpp  Settings.cpp  Settings.hpp  Singleton.hpp  Subsystem.cpp  Subsystem.hpp  TimeUtils.cpp  TimeUtils.hpp  TimerManager.cpp  TimerManager.hpp
code/Editor/: EditorBuilder.cpp  EditorBuilder.hpp
code/Events/: Event.cpp  Event.hpp  EventsManager.cpp  EventsManager.hpp
code/File/: File.cpp  File.hpp
code/Graphics/: Animation.cpp  Animation.hpp  AnimationFrame.cpp  AnimationFrame.hpp  Batch.cpp  Batch.hpp  BatchesMap.cpp  BatchesMap.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Frustum.cpp  Frustum.hpp  Graphics.hpp  LineRenderer.cpp  LineRenderer.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  MeshPrimitives.cpp  MeshPrimitives.hpp  RenderContext.cpp  RenderContext.hpp  RenderEngine.cpp  RenderEngine.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShapeBatchRenderer.cpp  ShapeBatchRenderer.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  Texture.cpp  Texture.hpp
code/Input/: Input.cpp  Input.hpp  InputEvents.hpp
code/Log/: Log.cpp  Log.hpp
code/Math/: MathUtils.hpp  Matrix4.cpp  Matrix4.hpp  Vector3.hpp
code/Maths/: Geometry.cpp  Geometry.hpp  MathUtils.cpp  MathUtils.hpp  Maths.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  VectorDef.hpp
code/Memory/: Allocator.cpp  Allocator.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  Memory.cpp  Memory.hpp  PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp
code/Net/: Server.cpp  Server.hpp
code/Physics/: Collider.cpp  Collider.hpp  ContactsManager.cpp  ContactsManager.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  QuadTree.cpp  QuadTree.hpp  RigidBody.cpp  RigidBody.hpp
code/Profiler/: Profiler.cpp  Profiler.hpp
code/Scene/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  GameObjectBuilder.cpp  GameObjectBuilder.hpp  Scene.cpp  Scene.hpp  ScenesManager.cpp  ScenesManager.hpp  Transform.cpp  Transform.hpp
code/Scenes/: Component.cpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scenes.hpp  ScenesManager.cpp  Transform.cpp  Transform.hpp
code/Scripting/: Script.cpp  Script.hpp  ScriptEngine.cpp  ScriptEngine.hpp  Scripting.hpp
code/SpacePartition/: KTree.cpp  KTree.hpp
code/Test/: Test.hpp
code/UI/: UI.cpp  UI.hpp  UIBuilder.cpp  UIBuilder.hpp  UIButton.cpp  UIButton.hpp  UIDropdown.cpp  UIDropdown.hpp  UIEditableText.cpp  UIEditableText.hpp  UIElement.cpp  UIElement.hpp  UIElementConfig.cpp  UIElementConfig.hpp  UIGroup.cpp  UIGroup.hpp  UIList.cpp  UIList.hpp  UIManager.cpp  UIManager.hpp  UIPanel.cpp  UIPanel.hpp  UIStyle.cpp  UIStyle.hpp  UIText.cpp  UIText.hpp  UITextEditable.cpp  UITextEditable.hpp  UIUtils.cpp  UIUtils.hpp
config/: editor.conf  engine.conf  engine.json  map.conf  scene.conf  sceneTmp.conf  sceneTmp1.conf  sceneTmp2.conf  test.conf  test.json  testOut.conf  tmp.json
doc/html/: Allocable_8h.html  Allocable_8h__dep__incl.map  Allocable_8h__dep__incl.md5  Allocable_8h__incl.map  Allocable_8h__incl.md5  Allocable_8h_source.html  Allocator_8h_source.html  Array_8h_source.html  Assert_8h_source.html  BaseArray_8h_source.html  BaseList_8h_source.html  BasicTypes_8h_source.html  Container_8h_source.html  Debug_8h_source.html  Druid_8h_source.html  LinearAllocator_8h_source.html  List_8h_source.html  MathUtils_8h_source.html  Matrix4_8h_source.html  MemoryUtils_8h.html  MemoryUtils_8h__dep__incl.map  MemoryUtils_8h__dep__incl.md5  MemoryUtils_8h__incl.map  MemoryUtils_8h__incl.md5  annotated.html  (+157 more)
include/: Aligned16.h  Allocatable.h  Allocator.h  Array.h  Assert.h  AtomicTypes.h  BaseArray.h  BaseList.h  BasicTypes.h  Container.h  Debug.h  Druid.h  LinearAllocator.h  List.h  MathUtils.h  Matrix4.h  PoolAllocator.h  Quaternion.h  StackAllocator.h  Test.h  Vector2.h  Vector3.h  Vector4.h
log/: log.txt
resources/: background.png~  book.png~  bridge.png~  font16x16.xcf  tiles.png~
scripts/: build.bat  build.py  build.sh  clean.py  clean.sh  create-class.sh  create-script.sh  dependencies.py  dependencies.sh  doc.py  doc.sh  generateClassList.py  generateCode.py  generateForEach.py  generateIncludes.py  generateInstanceByName.py  test.sh  upload.sh
test/Tree/: CMakeLists.txt  Tree.cpp
test_bin/: DE::Array<u32>.txt  DE::LinearAllocator.txt  DE::List<Test>.txt  DE::List<u32>.txt  DE::Matrix4.txt  DE::PoolAllocator.txt  DE::Quaternion.txt  DE::StackAllocator.txt  DE::Vector2.txt  DE::Vector3.txt  DE::Vector4.txt  test_druid_Array  test_druid_LinearAllocator  test_druid_List  test_druid_List1  test_druid_Matrix4  test_druid_PoolAllocator  test_druid_Quaternion  test_druid_StackAllocator  test_druid_Vector2  test_druid_Vector3  test_druid_Vector4
(+662 files in other folders)
